Fixed icons not Showing issue

--- a/src/scss/4-pages/_about.scss
+++ b/src/scss/4-pages/_about.scss
@@ -74,6 +74,8 @@
             width: 1rem;
             height: 1.3rem;
             display: inline-block;
+            @include bgImg();
+            background: url('/src/img/icons/next.png');
 
           }
           
