--- a/src/scss/4-pages/_header.scss
+++ b/src/scss/4-pages/_header.scss
@@ -14,14 +14,13 @@
         }
 
         .menu-toggler{
-            font-size: 3rem;
             color: $primary-color;
             display: none;
             cursor: pointer;
 
             .menu-burger{
                 width: 50px;
-                height: 6px;
+                height: 4px;
                 background-color: $white;
                 border-radius: 5px;
                 box-shadow: 0 2px 5px rgba(255,101,47,.2);
@@ -32,7 +31,7 @@
                     content: '';
                     position: absolute;
                     width: 50px;
-                    height: 6px;
+                    height: 4px;
                     background-color: $white;
                     border-radius: 5px;
                     box-shadow: 0 2px 5px rgba(255,101,47,.2);
